.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__TicketType__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competencies</relationshipLabel>
    <relationshipName>Competencies</relationshipName>
    <type>Lookup</type>
</CustomField>