.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__TicketType__c/fields/Competency_Category__c.field-meta.xml
<CustomField>
    <fullName>Competency_Category__c</fullName>
    <label>Competency Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID Doc</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Mandatory Training</fullName>
            </value>
            <value>
                <fullName>Practical Training</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Client Induction</fullName>
            </value>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Vaccination/Immunisation</fullName>
            </value>
            <value>
                <fullName>Skills</fullName>
            </value>
            <value>
                <fullName>Exclusion</fullName>
            </value>
            <value>
                <fullName>Paypoint</fullName>
            </value>
            <value>
                <fullName>Job Type</fullName>
            </value>
            <value>
                <fullName>Driving Licenses</fullName>
                <isActive>false</isActive>
                <label>Driving Licenses</label>
            </value>
            <value>
                <fullName>Exclusions</fullName>
                <isActive>false</isActive>
                <label>Exclusions</label>
            </value>
            <value>
                <fullName>General</fullName>
                <isActive>false</isActive>
                <label>General</label>
            </value>
            <value>
                <fullName>Heath &amp; Safety</fullName>
                <isActive>false</isActive>
                <label>Heath &amp; Safety</label>
            </value>
            <value>
                <fullName>Inductions</fullName>
                <isActive>false</isActive>
                <label>Inductions</label>
            </value>
            <value>
                <fullName>Medical</fullName>
                <isActive>false</isActive>
                <label>Medical</label>
            </value>
            <value>
                <fullName>Office/Admin</fullName>
                <isActive>false</isActive>
                <label>Office/Admin</label>
            </value>
            <value>
                <fullName>Specialties</fullName>
                <isActive>false</isActive>
                <label>Specialties</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>