.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__TicketType__c/fields/Interpretation_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>Interpretation_Template_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Interpretation Template Group this competency relates to.</inlineHelpText>
    <label>Interpretation Template Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Template_Group__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Interpretation Rules</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Competencies</relationshipLabel>
    <relationshipName>Competencies</relationshipName>
    <type>Lookup</type>
</CustomField>