.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__TicketType__c/fields/Is_Role_Competency__c.field-meta.xml
<CustomField>
    <fullName>Is_Role_Competency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, indicates that the Competency is a Role. Else it is a Skill.</description>
    <label>Is Role Competency?</label>
    <type>Checkbox</type>
</CustomField>