.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__TicketType__c/fields/Is_Skill_Competency__c.field-meta.xml
<CustomField>
    <fullName>Is_Skill_Competency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can be used in Skill (AND/OR) Bundles if checked</inlineHelpText>
    <label>Is Bundleable Skill Competency?</label>
    <type>Checkbox</type>
</CustomField>