.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__TicketType__c/validationRules/Cannot_Be_Both_Role_and_Skill_Competency.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Be_Both_Role_and_Skill_Competency</fullName>
    <active>true</active>
    <description>A competency can be used in either role bundles or skill bundles but not both</description>
    <errorConditionFormula>AND(Is_Role_Competency__c, Is_Skill_Competency__c)</errorConditionFormula>
    <errorDisplayField>Is_Skill_Competency__c</errorDisplayField>
    <errorMessage>A competency can be either a role or a skill competency but not both</errorMessage>
</ValidationRule>